force-app/main/default/objects/Opportunity_Competitor__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Lookup</type>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Opportunity Links</relationshipLabel>
    <relationshipName>Opportunity_Links</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>