force-app/main/default/objects/Opportunity_Competitor__c/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Price</fullName><default>false</default></value>
            <value><fullName>Features</fullName><default>false</default></value>
            <value><fullName>Relationship</fullName><default>false</default></value>
            <value><fullName>Other</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>