force-app/main/default/objects/Opportunity_Competitor__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>MasterDetail</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Competitor Links</relationshipLabel>
    <relationshipName>Competitor_Links</relationshipName>
    <required>true</required>
</CustomField>