force-app/main/default/objects/Opportunity_Competitor__c/fields/Threat_Level__c.field-meta.xml
<CustomField>
    <fullName>Threat_Level__c</fullName>
    <label>Threat Level</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Low</fullName><default>false</default></value>
            <value><fullName>Medium</fullName><default>true</default></value>
            <value><fullName>High</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>